--- a/metadata.yaml
+++ b/metadata.yaml
@@ -35,5 +35,6 @@ subjects:
 - !lcsh 'Sailors -- Juvenile fiction'
 - !lcsh 'Ships -- Juvenile fiction'
 - !lcsh 'Schools -- Juvenile fiction'
+- GITenberg
 title: 'Outward Bound Or, Young America Afloat: A Story of Travel and Adventure'
 url: http://www.gutenberg.org/ebooks/15920
